# BetterMesic

./: .env.example  .gitignore  Dockerfile  commands.py  conf.py  discloud.config  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run.sh  youtube_mesic.py
.cache/audios/: test.opus
bot/music_commands/: __init__.py  common.py  join.py  leave.py  loop.py  pause.py  play.py  resume.py  skip.py  stop.py
core/: conf.py  error_handler.py  event_handler.py  general_func.py
core/models/: __init__.py  queues.py
services/: youtube_mesic.py
